# emr_structured_annotation

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
gliner_backend/: Dockerfile  _wsgi.py  docker-compose.yml  model.py  requirements.txt
label_studio/: config.xml  ner.xml  ner2.xml  ner3.xml  ner3_操作说明.md  ner4.xml  pneumonia.xml
ml_backend/: _wsgi.py  model.py  model2.py  prompts.py  test_predict.py
