[project]
name = "emr-labelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gliner2>=1.2.4",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
